# oh-my-llama

./: .gitignore  .prettierignore  CHANGELOG.md  LICENSE.md  README.md  README_En.md  agents.md  eslint.config.js  index.html  package-lock.json  package.json  patch.diff  patch_frontend.py  patch_rust.py  vite.config.ts
.codebuddy/skills/codegraph/: SKILL.md
.dev_docs/: engineering-readiness.md  release-guide.md  release-notes-v0.0.3.md  release-notes-v0.0.8.md  release-notes-v0.1.0.md
.dev_docs/plan/: p0-remove-patch-scripts.md
.github/workflows/: release.yml
scripts/: dev-server.ps1
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  metrics.rs
src/components/: AdvancedParamsPanel.tsx  BasicParamsPanel.tsx  Button.tsx  ConfigManager.tsx  ConfigPanel.tsx  ConfirmDialog.tsx  ControlPanel.tsx  IconButton.tsx  LangSwitch.tsx  LogPanel.tsx  MetricsPanel.css  MetricsPanel.tsx  ModelSelect.tsx  NameDialog.tsx  ParamPaste.tsx  PathField.tsx  PreviewBar.tsx  RawParams.tsx  SettingsDialog.tsx  UpdateDialog.tsx
src/hooks/: useServer.ts  useUpdater.ts
src/i18n/: index.tsx  messages.ts
src/lib/: advanced.ts  parseArgs.ts
