[package]
name = "oh-my-llama"
version = "0.0.2"
description = "Oh My Llama"
authors = ["GDWhisper"]
edition = "2021"

[lib]
name = "oh_my_llama_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sysinfo = "0.30"
toml = { version = "1.1.2", features = ["serde"] }
# 仅用于 Job Object 内核级守护（KILL_ON_JOB_CLOSE）与控制台 CTRL_C_EVENT 优雅退出信号。
# 微软官方 crate，仅链接期绑定、体积极小，结构体布局经过审计。
# feature 门控（已按 0.59 源码核对）：
#   - CreateJobObjectW          → Win32_Security
#   - JOBOBJECT_EXTENDED_LIMIT_INFORMATION → Win32_System_Threading
# 0.59 已锁定且本地缓存，离线可编译。
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_JobObjects", "Win32_System_Threading", "Win32_Security", "Win32_System_Console"] }
